# TranslationAPIPlay

./: .env.example  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  supported_languages.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.code.yml
app/: main.py
app/dependencies/: env.py  translate_client.py
app/translations/: dependencies.py  models.py  router.py  services.py  types.py  utils.py
scripts/: create_api_keys.py
